unpackaged/main/default/objects/Picklist_Detail__c/Picklist_Detail__c.object-meta.xml
<CustomObject>
    <description>This object has all picklist values related to its picklist master E.g Time Zone is the picklist master and its time zone literals (values) like IST, PST, EST will be here in this object</description>
    <label>Picklist Detail</label>
    <nameField>
        <label>Picklist Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklist Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>