unpackaged/main/default/objects/Picklist_Detail__c/fields/Dev_Picklist_Detail_Id__c.field-meta.xml
<CustomField>
    <fullName>Dev_Picklist_Detail_Id__c</fullName>
    <label>Dev Picklist Detail Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>