unpackaged/main/default/objects/Picklist_Detail__c/fields/Picklist_Master__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Master__c</fullName>
    <label>Picklist Master</label>
    <referenceTo>Picklist_Master__c</referenceTo>
    <relationshipLabel>Picklist Details</relationshipLabel>
    <relationshipName>Picklist_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>