unpackaged/main/default/objects/Picklist_Detail__c/fields/TEM_Version__c.field-meta.xml
<CustomField>
    <fullName>TEM_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TEM Version</label>
    <referenceTo>TEM_Version__c</referenceTo>
    <relationshipLabel>Picklist Details</relationshipLabel>
    <relationshipName>Picklist_Details</relationshipName>
    <type>Lookup</type>
</CustomField>