unpackaged/main/default/objects/Picklist_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Picklist_Master__c</columns>
    <columns>TEM_Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>